# ClanBomber2

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.hg  DEPENDENCIES  EXTERNAL  IDEAS  Makefile  Makefile.am  Makefile.in  NEWS  QUOTES  README  README.md  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
po/: ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  clanbomber.pot  es.gmo  es.po
src/: AudioBuffer.h  AudioBufferSDL.cpp  AudioBufferSDL.h  AudioSimple.h  AudioSimpleSDL.cpp  AudioSimpleSDL.h  Bomb.cpp  Bomb.h  Bomber.cpp  Bomber.h  Bomber_Corpse.cpp  Bomber_Corpse.h  ClanBomber.cpp  ClanBomber.h  Controller.cpp  Controller.h  Controller_AI.cpp  Controller_AI.h  Controller_AI_mass.cpp  Controller_AI_mass.h  Controller_Joystick.cpp  Controller_Joystick.h  Controller_Keyboard.cpp  Controller_Keyboard.h  Controller_RCMouse.cpp  Controller_RCMouse.h  Corpse_Part.cpp  Corpse_Part.h  Credits.cpp  Credits.h  Disease.cpp  Disease.h  Disease_Fast.cpp  Disease_Fast.h  Disease_Frozen.cpp  Disease_Frozen.h  Disease_PutBomb.cpp  Disease_PutBomb.h  Disease_Stoned.cpp  Disease_Stoned.h  (+87 more)
src/.deps/: Bomb.Po  Bomber.Po  Bomber_Corpse.Po  Chat.Po  ClanBomber.Po  Controller.Po  Controller_AI.Po  Controller_AI_mass.Po  Controller_Joystick.Po  Controller_Keyboard.Po  Controller_RCMouse.Po  Corpse_Part.Po  Credits.Po  Disease.Po  Disease_Fast.Po  Disease_Frozen.Po  Disease_PutBomb.Po  Disease_Stoned.Po  Explosion.Po  Extra.Po  Extra_Bomb.Po  Extra_Glove.Po  Extra_Joint.Po  Extra_Kick.Po  Extra_Koks.Po  Extra_Power.Po  Extra_Skateboard.Po  Extra_Viagra.Po  GameConfig.Po  GameObject.Po  GameStatus.Po  GameStatus_Team.Po  Map.Po  MapEditor.Po  MapEntry.Po  MapSelector.Po  MapTile.Po  MapTile_Arrow.Po  MapTile_Box.Po  MapTile_Ground.Po  (+13 more)
src/cbe/: AudioSimple.h  FontSDL.cpp  FontSDL.h  Makefile  Makefile.am  Makefile.in  PluginManager.cpp  Surface.h  SurfaceSDL.h
src/cbe/.deps/: libcbe_a-AudioBufferSDL.Po  libcbe_a-AudioSimpleSDL.Po  libcbe_a-FontSDL.Po  libcbe_a-MusicSDL.Po  libcbe_a-PluginManager.Po  libcbe_a-SurfaceSDL.Po
src/cbe/SDL/: AudioSimpleSDL.h  FactoriesSDL.hpp  MusicSDL.cpp
src/fonts/: Makefile  Makefile.am  Makefile.in  README
src/maps/: Arena.map  Big_Block.map  Big_Standard.map  Blast_Matrix.map  Bloody_Ring.map  Boiling_Egg.map  Bomb_Attack.map  Broken_Heart.map  Crammed.map  Death_Corridor.map  Dilemma.map  FearCircle.map  FearCircle_Remix.map  FireWheels.map  Football.map  Four_Instance.map  Ghostbear.map  Hard_Work.map  Hole_Run.map  Huge_Standard.map  Juicy_Lucy.map  Kitchen.map  Makefile  Makefile.am  Makefile.in  Meeting.map  MungoBane.map  Obstacle_Race.map  Overkill.map  Prison_Cells.map  README  Redirection.map  Sixty_Nine.map  Small_Standard.map  Snake_Race.map  Tiny_Standard.map  Whole_Mess.map
src/menuentry/: Makefile  Makefile.am  Makefile.in  clanbomber.desktop  clanbomber.desktop.in
src/pics/: Makefile  Makefile.am  Makefile.in  README
src/wavs/: Makefile  Makefile.am  Makefile.in  README
