noinst_LIBRARIES = libcbe.a

libcbe_a_CPPFLAGS = $(SDL_CFLAGS)

libcbe_a_SOURCES = \
	Font.h \
	FontSDL.cpp \
	FontSDL.h \
	Surface.h \
	SurfaceSDL.cpp \
	SurfaceSDL.h \
	AudioSimple.h \
	AudioBuffer.h \
	Music.h \
	SDL/AudioSimpleSDL.h \
	SDL/AudioSimpleSDL.cpp \
	SDL/MusicSDL.h \
	SDL/MusicSDL.cpp \
	SDL/AudioBufferSDL.h \
	SDL/AudioBufferSDL.cpp \
	SDL/FactoriesSDL.hpp \
	Factories.hpp \
	PluginManager.h \
	PluginManager.cpp
