mapsdir = $(datadir)/$(PACKAGE)/maps

dist_maps_DATA = \
	Crammed.map \
	Hole_Run.map \
	Obstacle_Race.map \
	Prison_Cells.map \
	Small_Standard.map \
	Tiny_Standard.map \
	Football.map \
	Kitchen.map \
	Whole_Mess.map \
	Redirection.map \
	Bloody_Ring.map \
	Four_Instance.map \
	Ghostbear.map \
	Hard_Work.map \
	Meeting.map \
	Overkill.map \
	Sixty_Nine.map \
	Boiling_Egg.map \
	Bomb_Attack.map \
	Arena.map \
	Big_Block.map \
	Big_Standard.map \
	Blast_Matrix.map \
	Death_Corridor.map \
	Dilemma.map \
	FearCircle.map \
	FearCircle_Remix.map \
	FireWheels.map \
	Huge_Standard.map \
	Juicy_Lucy.map \
	MungoBane.map \
	Snake_Race.map \
	Broken_Heart.map
