picsdir = $(datadir)/$(PACKAGE)/pics

dist_pics_DATA = \
	bomber_bsd.png \
	bomber_dull_blue.png \
	bomber_dull_green.png \
	bomber_dull_red.png \
	bomber_dull_yellow.png \
	bomber_snake.png \
	bomber_spider.png \
	bomber_tux.png \
	bombs.png \
	cb_logo_small.png \
	clanbomber_title_andi.png \
	corpse_parts.png \
	cup2.png \
	explosion2.png \
	extras2.png \
	fischlustig_logo.png \
	game_status.png \
	horst_evil.png \
	level_selection.png \
	map_editor.png \
	maptile_addons.png \
	maptiles.png \
	not_available.png \
	observer.png \
	playersetup.png \
	ps_controls.png \
	ps_teamlamps.png \
	ps_teams.png
