wavsdir = $(datadir)/$(PACKAGE)/wavs

dist_wavs_DATA = \
	break.wav \
	clear.wav \
	corpse_explode.wav \
	deepfall.wav \
	die.wav \
	explode.wav \
	forward.wav \
	horny.wav \
	hurry_up.wav \
	joint.wav \
	klatsch.wav \
	menu_back.wav \
	putbomb.wav \
	rewind.wav \
	schnief.wav \
	splash1a.wav \
	splash2a.wav \
	stop.wav \
	time_over.wav \
	typewriter.wav \
	whoosh.wav \
	winlevel.wav \
	wow.wav \
	crunch.wav \
	bud.mod

